<resources>
    <string name="app_name">Street Food Dynasty</string>
    <string name="mapbox_access_token">pk.eyJ1IjoicmV6YWZwaTAwOCIsImEiOiJjbDUzdng2MnMwdDdrM2VyeHczdnB4aTdpIn0.BcOvcSLG2YWzXqHNy5fbag</string>
    <string name="Invalid_email_address">Invalid email address</string>
    <string name="please_fill_this_field">Please fill this field</string>
    <string name="enter_valid_number">Enter Valid Number</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="food_truck_app">Street Food Danasty</string>
    <string name="deliver_favorite_food">Deliver favorite food</string>
    <string name="next">Next</string>
    <string name="here_you_can_search_and_find_your_best_delicious_food">Here you can search and find your best delicious food</string>
    <string name="find_your_comfort_food_here">Find your comfort food here</string>
    <string name="delicious_food_and_offer_everyday">Delicious food and offer everyday</string>
    <string name="offer_for_you_everyday_every_times_in_mounth">Offer for you, everyday, every times in mounth</string>
    <string name="order_online_at_no_extra_cost">Order online, at no extra cost</string>
    <string name="order_online_and_enjoy_your_food">Order online and enjoy your food</string>
    <string name="online_order_free_delivery">Online order, free delivery</string>
    <string name="order_online_and_get_free_delivery_everytime">Order online and get free delivery everytime</string>
    <string name="network_and_score_points">Network and score points</string>
    <string name="introduce_us_to_your_friends_and_get_points">Introduce us to your friends and get points</string>
    <string name="restaurants_cafes_and_shops_nearby">Restaurants, cafes and shops nearby</string>
    <string name="access_to_the_thousands_of_restaurants_and_cafes_around_you">Access to the thousands of restaurants and cafes around you</string>
    <string name="get_start">Get start</string>
    <string name="get_your_groceries_with_food_truck">Get your groceries with food truck</string>
    <string name="or_connect_with_social_media">Or connect with social media</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="your_mobile_number">Your mobile number</string>
    <string name="login">Login</string>
    <string name="enter_your_emails_and_password">Enter your emails and password</string>
    <string name="email">Email</string>
    <string name="your_email">Your Email</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_credentials_to_continue">Enter your credentials to continue</string>
    <string name="username">Username</string>
    <string name="your_username">Your Username</string>
    <string name="id_card">ID Card</string>
    <string name="keep_me_signed_in">Keep Me Signed In</string>
    <string name="email_me_about_special_pricing">Email Me About Special Pricing</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="select_your_location">Select Your Location</string>
    <string name="switch_on_your_location_to_stay_in_what_s_happening_in_your_area">Switch on your location to stay in what’s happening in your area</string>
    <string name="your_id_card">Your ID Card</string>
    <string name="your_zone">Your Zone</string>
    <string name="select_your_zone">Select Your Zone</string>
    <string name="your_area">Your Area</string>
    <string name="submit">Submit</string>
    <string name="enter_referral_code">Enter referral code</string>
    <string name="pleas_enter_referral_code_for_earn_point_or_skip_this">Pleas enter referral code for earn point or skip this.</string>
    <string name="skip">Skip</string>
    <string name="_6_digit_alphabet_code"><![CDATA[6 digit & alphabet code]]></string>
    <string name="enter_your_6_digit_code">Enter your 6-digit code</string>
    <string name="code">Code</string>
    <string name="reset_your_password_here">Reset your password here</string>
    <string name="select_which_contact_details_should_we_use_to_reset_your_password">Select which contact details should we use to reset your password</string>
    <string name="password">Password</string>
    <string name="new_password">New Password</string>
    <string name="forget_password">Forget password</string>
    <string name="via_email">Via email:</string>
    <string name="via_sms">Via sms:</string>
    <string name="browse">Browse</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="passwords_do_not_match">Passwords do not match.</string>
    <string name="loging">Loging</string>
    <string name="view_more">View more</string>
    <string name="my_details">My Details</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="orders">Orders</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="payment_methods_two_line">Payment \n Methods</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="log_out">Log Out</string>
    <string name="how_can_we_help_you">How can we help you?</string>
    <string name="what_do_you_want_to_order">What do you want to order?</string>
    <string name="top_question">Top question</string>
    <string name="update">Update</string>
    <string name="edit_paypal">Edit PayPal</string>
    <string name="credit_card">Credit Card</string>
    <string name="card_number">Card Number</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="secure_code">Secure Code</string>
    <string name="name_on_card">Name on Card</string>
    <string name="profile_edit">Profile edit</string>
    <string name="full_name">Full Name</string>
    <string name="birth_date">Birth Date</string>
    <string name="buy_again">Buy again</string>
    <string name="please_rate_your_order">Please rate your order</string>
    <string name="comment">Comment</string>
    <string name="order_tracking">Order tracking</string>
    <string name="active_orders">Active orders</string>
    <string name="invoice">Invoice</string>
    <string name="home">Home</string>
    <string name="vouchers">Vouchers</string>
    <string name="order">Order</string>
    <string name="invitation">Invitation</string>
    <string name="profile">Profile</string>
    <string name="check_connection">check connection</string>
    <string name="set_location">Set Location</string>
    <string name="your_location">Your Location</string>
    <string name="search_your_address">Search your address</string>
    <string name="locations">Locations</string>
    <string name="new_address">New Address</string>
    <string name="permission_not_received">Permission not received!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="your_location_service_is_disabled">Your location service is disabled. Would you like to enable it?</string>
    <string name="nothing_found">Nothing found</string>
    <string name="read">Read</string>
    <string name="buy_now">Buy Now</string>
    <string name="delicious_food_for_you">Delicious \nfood for you</string>
    <string name="restaurant_brand">Restaurant Brand</string>
    <string name="activities">Activities</string>
    <string name="cart">Cart</string>
    <string name="currency">$</string>
    <string name="sub_total">Sub-Total</string>
    <string name="delivery_charge">Delivery Charge</string>
    <string name="discount">Discount</string>
    <string name="total">Total</string>
    <string name="place_my_order">Place My Order</string>
    <string name="deliver_to">Deliver To</string>
    <string name="edit">Edit</string>
    <string name="payment_method">Payment Method</string>
    <string name="add">Add</string>
    <string name="do_you_have_discount_gift_card_code">Do you have discount, gift card code?</string>
    <string name="please_add_your_code">Please add your code.</string>
    <string name="add_your_code">Add your code</string>
    <string name="check_now">Check Now</string>
    <string name="done">Done</string>
    <string name="delivery">Delivery</string>

</resources>