<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/vouchersFragment"
        android:icon="@drawable/ic_vouchers"
        android:title="@string/vouchers" />

    <item
        android:id="@+id/orderFragment"
        android:title="@string/order" />
    <item
        android:id="@+id/invitationFragment"
        android:icon="@drawable/ic_invitation"
        android:title="@string/invitation" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />

</menu>