<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.entry.SignUpFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_15sdp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/main_font_bold"
                android:text="@string/sign_up"
                android:textColor="@color/text_black"
                android:textSize="26sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/main_font"
                android:text="@string/enter_your_credentials_to_continue"
                android:textColor="@color/text_gray"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/main_font"
                android:text="@string/username"
                android:textColor="@color/text_gray"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/textView9"
                tools:layout_editor_absoluteX="19dp" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@android:color/transparent"
                android:gravity="start"
                android:hint="@string/your_username"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/text_gray" />

            <View
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/separator_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/main_font"
                android:text="@string/email"
                android:textColor="@color/text_gray"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@android:color/transparent"
                android:gravity="start"
                android:hint="@string/your_email"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/text_gray" />

            <View
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/separator_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/main_font"
                android:text="Password"
                android:textColor="@color/text_gray"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@android:color/transparent"
                android:gravity="start"
                android:hint="......"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/text_gray" />

            <View
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/separator_color" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/main_font"
                android:text="@string/id_card"
                android:textColor="@color/text_gray"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/textView9"
                tools:layout_editor_absoluteX="19dp" />

            <LinearLayout
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:id="@+id/idCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:gravity="start"
                    android:hint="@string/your_id_card"
                    android:inputType="numberSigned"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/text_gray" />

                <LinearLayout
                    android:padding="@dimen/_5sdp"
                    android:background="@drawable/bg_primary_light_round_10sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_gravity="center"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:id="@+id/imageView6"
                        android:layout_width="@dimen/_8sdp"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_attachment" />

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:fontFamily="@font/main_font"
                        android:textSize="14sp"
                        android:text="@string/browse" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/separator_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/main_font"
                    android:text="@string/keep_me_signed_in"
                    android:textColor="@color/text_gray"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:checked="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/main_font"
                    android:text="@string/email_me_about_special_pricing"
                    android:textColor="@color/text_gray"
                    android:textSize="14sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/signup"
                android:layout_marginTop="@dimen/_20sdp"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:background="@drawable/bg_primary_round_10sdp"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:fontFamily="@font/main_font"/>

            <LinearLayout
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account"
                    android:textSize="14sp"
                    android:textColor="@color/text_gray"
                    android:fontFamily="@font/main_font"/>

                <TextView
                    android:layout_marginStart="@dimen/_5sdp"
                    android:id="@+id/signIn"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/main_font_bold"
                    android:text="@string/sign_in"
                    android:textColor="@color/colorPrimary"
                    />
            </LinearLayout>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>