<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".view.profileFragments.HelpFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_main" />

    <LinearLayout
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/help"
            android:textColor="@color/text_black"
            android:textSize="30sp"
            android:fontFamily="@font/main_font_bold" />
        <TextView
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/how_can_we_help_you"
            android:textColor="@color/text_black"
            android:textSize="25sp"
            android:fontFamily="@font/main_font" />
        <LinearLayout
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_primary_light_round_10sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_36sdp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageView7"
                android:layout_gravity="center"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:src="@drawable/ic_search" />

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:id="@+id/editTextTextPersonName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="@font/main_font"
                android:textSize="12sp"
                android:inputType="textPersonName"
                android:hint="@string/what_do_you_want_to_order"
                android:textColorHint="@color/color_hint_primary"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

        <TextView
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/top_question"
            android:textColor="@color/text_black"
            android:textSize="30sp"
            android:fontFamily="@font/main_font_bold" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

</LinearLayout>