<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="@dimen/_15sdp"
        tools:context=".view.entry.SelectLocationFragment">


        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/main_font_bold"
            android:text="@string/select_your_location"
            android:textColor="@color/text_black"
            android:textSize="26sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/main_font"
            android:text="@string/switch_on_your_location_to_stay_in_what_s_happening_in_your_area"
            android:textColor="@color/text_gray"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/main_font"
            android:text="@string/your_zone"
            android:textColor="@color/text_gray"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            tools:layout_editor_absoluteX="19dp" />

        <LinearLayout
            android:id="@+id/selectZone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/textView11">

            <TextView
                android:id="@+id/zone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="start"
                android:layout_weight="1"
                android:hint="@string/select_your_zone"
                android:textColor="@color/black"
                android:textColorHint="@color/text_gray"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/ic_arrow_down" />
        </LinearLayout>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@color/separator_color"
            app:layout_constraintTop_toBottomOf="@+id/selectZone"
            tools:layout_editor_absoluteX="19dp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/main_font"
            android:text="@string/your_area"
            android:textColor="@color/text_gray"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/view"
            tools:layout_editor_absoluteX="19dp" />

        <LinearLayout
            android:id="@+id/selectArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/textView12">

            <TextView
                android:id="@+id/area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="start"
                android:hint="@string/select_your_zone"
                android:textColor="@color/black"
                android:textColorHint="@color/text_gray"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/ic_arrow_down" />
        </LinearLayout>


        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@color/separator_color"
            app:layout_constraintTop_toBottomOf="@+id/selectArea"
            tools:layout_editor_absoluteX="19dp" />

        <TextView
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/bg_primary_round_10sdp"
            android:fontFamily="@font/main_font"
            android:gravity="center"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
