<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.entry.PhoneRegisterFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:fontFamily="@font/main_font_bold"
        android:text="@string/enter_your_mobile_number"
        android:textColor="@color/text_black"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_22sdp"
        android:fontFamily="@font/main_font"
        android:text="@string/mobile_number"
        android:textColor="@color/text_gray"
        android:textSize="16sp"
        android:layout_marginStart="@dimen/_15sdp"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <LinearLayout
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/textView10">

        <com.hbb20.CountryCodePicker
            android:id="@+id/ccp"
            android:gravity="center"
            app:ccp_showFullName="false"
            app:ccp_showNameCode="false"
            app:ccp_showPhoneCode="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:paddingTop="@dimen/_5sdp"
            app:ccp_arrowSize="@dimen/_12sdp"
            app:ccp_autoFormatNumber="true"
            app:ccp_clickable="true"
            app:ccp_defaultPhoneCode="60" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtMobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/your_mobile_number"
            android:inputType="number"
            android:focusable="true"
            android:maxLength="11"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/text_gray" />
    </LinearLayout>

    <View
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/separator_color"
        app:layout_constraintBottom_toBottomOf="@+id/login" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_margin="@dimen/_20sdp"
        android:id="@+id/btnNext"
        android:layout_width="@dimen/_54sdp"
        android:layout_height="@dimen/_54sdp"
        android:src="@drawable/ic_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>